add experience component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,18 @@
 ---
 import Badge from '../components/badge.astro';
-import LinkIn from '../icons/linkin.astro';
-import Github from '../icons/github.astro';
-import Layout from '../layouts/Layout.astro';
 import SocialPill from '../components/social-pill.astro';
+import Github from '../icons/github.astro';
+import LinkIn from '../icons/linkin.astro';
+import Mail from '../icons/mail.astro';
+import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout 
+	title="Porfolio de Maruan - Desarrollador y Programador Web"
+	description='Contrata a Maruan Vicente para hacer realidad tu próxmo proyecto web'>
 	<main>
 		<section class="w-full lg:w-[740px] py-44">
-			<img class="rounded-full mb-4 w-24 h-24" src="./profile.jpeg" alt="Imagen de perfil de Maruan V. Cardenas">
+			<img class="rounded-full mb-4 size-24" src="./profile.jpeg" alt="Imagen de perfil de Maruan V. Cardenas">
 			<h1 class="text-5xl font-bold flex gap-x-4 pb-4">
 				Hey, Soy Maruan
 				<a
@@ -28,12 +31,16 @@ import SocialPill from '../components/social-pill.astro';
 			</h2>
 			<nav class="flex gap-2 mt-4">
 				<SocialPill link="https://www.linkedin.com/in/maruan-cardenas/">
-					<LinkIn class="w-6 h-6" />
+					<LinkIn class="size-6" />
 					LinkIn
 				</SocialPill>
 				<SocialPill link="https://github.com/Maruan-Cardenas">
-					<Github class="w-6 h-6" />
+					<Github class="size-6" />
 					Github
+				</SocialPill>
+				<SocialPill link="https://github.com/Maruan-Cardenas">
+					<Mail class="size-6" />
+					Email
 				</SocialPill>
 			</nav>
 		</section>
